--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <body>
     <div class="greetings">
-        <span>K</span>
+        <span>M</span>
         <span>a</span>
-        <span>r</span>
-        <span>i</span>
-        <span>s</span>
+        <span>x</span>
+        <span>!</span>
+        <span>!</span>
         <span>!</span>
     </div>
   
